--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,12 +1,12 @@
-.header{
+.header {
     height: 34vw;
     margin: 30px auto;
-    background: url('/header_img.png') no-repeat;
+    background: url(../../assets/header_img.png) no-repeat;
     background-size: contain;
     position: relative;
 }
 
-.header-contents{
+.header-content {
     position: absolute;
     display: flex;
     flex-direction: column;
@@ -18,20 +18,18 @@
     animation: fadeIn 3s;
 }
 
-.header-contents h2{
+.header-content h2 {
     font-weight: 500;
-    color: white;
-    text-shadow: 1px 2px 2px black;
     font-size: max(4.5vw, 22px);
-}
-
-.header-contents p{
     color: white;
-    text-shadow: 1px 2px 2px black;
-    font-size: 1vw;
 }
 
-.header-contents button{
+.header-content p {
+    font-size: 1vw;
+    color: white;
+}
+
+.header-content button {
     border: none;
     color: #747474;
     font-weight: 500;
@@ -39,32 +37,4 @@
     background-color: white;
     font-size: max(1vw, 13px);
     border-radius: 50px;
-    cursor: pointer;
-}
-
-:root .buttonwl {
-    color: black;
-}
-
-.lightcolors .buttonwl {
-    color: #747474;
-}
-
-
-@media (max-width:1050px) {
-    .header-contents{
-        max-width: 45%;
-    }
-}
-
-@media (max-width:750px) {
-    .header-contents{
-        max-width: 65%;
-    }
-    .header-contents p{
-        display: none;
-    }
-    .header-contents button{
-        padding: 2vw 4vw;
-    }
 }
