--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -9,57 +9,46 @@
     padding-top: 80px;
     margin-top: 100px;
 }
+
 .footer-content{
     width: 100%;
     display: grid;
-    grid-template-columns: 2fr 1fr 1fr;
+    grid-template-columns: 2fr 1fr 2fr;
     gap: 80px;
 }
-.footer-content-left , .footer-content-right , .footer-content-center {
+
+.footer-content-left, .footer-content-right, .footer-content-center{
     display: flex;
     flex-direction: column;
     align-items: start;
     gap: 20px;
 }
-.footer-content-left li, .footer-content-right li, .footer-content-center li {
+
+.footer-content-left li, .footer-content-right li, .footer-content-center li{
     list-style: none;
     margin-bottom: 10px;
     cursor: pointer;
 }
-.footer-content-right h2, .footer-content-center h2 {
+
+.footer-content-right h2, .footer-content-center h2{
     color: white;
+    user-select: none;
 }
+
 .footer-social-icons img{
-    cursor: pointer;
     width: 40px;
     margin-right: 15px;
 }
+
 .footer hr{
     width: 100%;
     height: 2px;
-    margin: 20px 0;
+    margin: 20px 0px;
     background-color: grey;
     border: none;
 }
 
-:root .footer {
-    background-color: #252323;
-}
-
-.lightcolors .footer {
-    background-color: #323232;
-}
-
-:root .tomatologofooter {
-    filter: var(--logos-filter); 
-}
-
-.lightcolors .tomatologofooter {
-    filter: none; 
-}
-
-
-@media (max-width:750px) {
+@media(max-width: 750px){
     .footer-content{
         display: flex;
         flex-direction: column;
