--- a/frontend/src/components/FoodItem/FoodItem.css
+++ b/frontend/src/components/FoodItem/FoodItem.css
@@ -1,53 +1,44 @@
-.food-item {
+.food-item{
     width: 100%;
     margin: auto;
     border-radius: 15px;
-    box-shadow: 0 0 10px #00000015;
+    box-shadow: 0px 0px 10px #00000015;
     transition: 0.3s;
     animation: fadeIn 1s;
 }
-
-.food-item-image {
+.food-item-image{
     width: 100%;
     border-radius: 15px 15px 0px 0px;
 }
-
-.food-item-info {
+.food-item-info{
     padding: 20px;
 }
-
-.food-item-name-rating {
-    display: flex;
+.food-item-name-rating{
+    display: grid;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 10px;
 }
-
-.food-item-name-rating p {
+.food-item-name-rating p{
     font-size: 20px;
     font-weight: 500;
 }
-
-.food-item-name-rating img {
+.food-item-name-rating img{
     width: 70px;
 }
-
-.food-item-desc {
-    font-size: 16px;
-    color: #676767; 
+.food-item-desc{
+    color: #676767;
+    font-size: 12px;
 }
-
-.food-item-price {
+.food-item-price{
     color: tomato;
     font-size: 22px;
     font-weight: 500;
     margin: 10px 0px;
 }
-
 .food-item-img-container{
     position: relative;
 }
-
 .food-item-img-container .add{
     width: 35px;
     position: absolute;
@@ -56,8 +47,8 @@
     cursor: pointer;
     border-radius: 50%;
 }
-
 .food-item-counter{
+    cursor: pointer;
     position: absolute;
     bottom: 15px;
     right: 15px;
@@ -68,7 +59,44 @@
     border-radius: 50px;
     background-color: white;
 }
-
 .food-item-counter img{
     width: 30px;
+}
+
+:root .cartitemsp,
+:root .food-item-price,
+:root .food-item-desc,
+:root .ratingstars,
+:root .namewe {
+    color: white;
+}
+
+
+.lightcolors .food-item-desc{
+    color: grey;
+}
+
+.lightcolors .cartitemsp,
+.lightcolors .food-item-info,
+.lightcolors .food-item-price,
+.lightcolors .ratingstars,
+.lightcolors .namewe {
+    color: black; 
+}
+
+:root .food-item-counter,
+:root .food-item-info{
+    background-color: rgb(36, 32, 32);
+}
+.lightcolors .food-item-counter,
+.lightcolors .food-item-info{
+    background-color: #FFFFFF;
+}
+
+:root .food-item-img-container .add{
+    background-color: black
+}
+
+.lightcolors .food-item-img-container .add{
+    background-color: white;
 }
