--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,32 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
-* {
-  margin: 0;
+*{
   padding: 0;
-  box-sizing: border-box;
-  font-family: Outfit, sans-serif;
+  margin: 0;
+  box-sizing: 0;
+  font-family: Outfit;
   scroll-behavior: smooth;
 }
 
-body {
+body{
+  background-color: var(--body-color);
   min-height: 100vh;
 }
 
-a {
+a{
   text-decoration: none;
   color: inherit;
 }
 
-.app {
+.app{
   width: 80%;
   margin: auto;
 }
 
 @keyframes fadeIn {
-  0% {
+  0%{
     opacity: 0;
   }
-  100% {
+  100%{
     opacity: 1;
   }
 }
