--- a/frontend/src/components/FoodDisplay/FoodDisplay.css
+++ b/frontend/src/components/FoodDisplay/FoodDisplay.css
@@ -22,34 +22,48 @@
 .lightcolors .h2we {
     color: black
 }
+/* FoodDisplay.css */
 .pagination {
     display: flex;
     justify-content: center;
-    margin-top: 50px;
-  }
+    padding-left: 0;
+    list-style-type: none; /* This removes the bullet points */
+    margin-top: 30px;
+}
 
-  .pagination button {
+.pagination .page-item {
+    margin: 0 5px;
+}
+
+.pagination .page-item .page-link {
+    border: 1px solid #ddd;
+    padding: 5px 10px;
+    text-decoration: none;
+    color: #007bff;
+    cursor: pointer;
+}
+
+.pagination .page-item .page-link:hover {
+    background-color: #e9ecef;
+}
+
+.pagination .page-item.disabled .page-link {
+    color: #6c757d;
+    cursor: not-allowed;
+}
+
+.pagination .page-item.active .page-link {
+    background-color: #007bff;
+    color: white;
+    border-color: #007bff;
+}
+.pagination button {
     background-color: #f0f0f0;
     border: 1px solid #ccc;
     color: #333;
     padding: 10px 15px;
     margin: 0 5px;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 20px;
     transition: background-color 0.3s, color 0.3s;
-  }
-
-  .pagination button:hover {
-    background-color: #007bff;
-    color: white;
-  }
-
-  .pagination button.active {
-    background-color: #007bff;
-    color: white;
-    border-color: #007bff;
-  }
-
-  .pagination button:focus {
-    outline: none;
   }
