--- a/admin/src/pages/Update/Update.css
+++ b/admin/src/pages/Update/Update.css
@@ -1,72 +1,55 @@
+:root {
+    --modal-bg-color: rgba(0, 0, 0, 0.5);
+    --modal-content-bg-color: black;
+    --add-color: var(--light-text);
+    --add-btn-bg-color: white;
+    --add-btn-text-color: black;
+}
+
+.lightcolors {
+    --modal-bg-color: rgba(255, 255, 255, 0.5);
+    --modal-content-bg-color: white;
+    --add-color: var(--dark-text);
+    --add-btn-bg-color: black;
+    --add-btn-text-color: white;
+}
+
 .modal {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    background-color: var(--modal-bg-color);
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1000; /* Ensure it appears above other content */
+    z-index: 1000;
 }
 
 .modal-content {
-    background-color: white;
+    background-color: var(--modal-content-bg-color);
     padding: 20px;
     border-radius: 10px;
     width: 500px;
 }
 
 .add {
-    /* Remove width, margin, and other styles specific to the modal content */
-    color: var(--light-text);
+    color: var(--add-color);
     font-size: 16px;
-}
-
-.add form {
-    gap: 20px;
-}
-
-.add-img-upload img {
-    width: 120px;
-}
-
-.add-product-name .add-product-description {
-    width: max(40%, 280px);
-}
-
-.add-product-name input,
-.add-product-description textarea {
-    padding: 10px;
-}
-
-.add-category-price {
-    display: flex;
-    gap: 30px;
-}
-
-.add-category-price select,
-.add-category-price input {
-    max-width: 120px;
-    padding: 10px;
-}
-
-.btn-container {
-    display: flex;
-    justify-content: space-between;
-    gap: 5px;
 }
 
 .add-btn {
     max-width: 120px;
     border: none;
     padding: 10px;
-    background-color: black;
-    color: white;
+    background-color: var(--add-btn-bg-color);
+    color: var(--add-btn-text-color);
     cursor: pointer;
+    margin: 10px;
 }
 
-label img[src*="assets/upload_area"] {
-    filter: var(--upload);
+.btn-container {
+    display: flex;
+    justify-content: flex-end;
 }
