[master] fix bugs

--- a/frontend/src/components/FoodDisplay/FoodDisplay.css
+++ b/frontend/src/components/FoodDisplay/FoodDisplay.css
@@ -39,7 +39,7 @@
     border: 1px solid #ddd;
     padding: 5px 10px;
     text-decoration: none;
-    color: #007bff;
+    color: #333;
     cursor: pointer;
 }
 
@@ -53,9 +53,9 @@
 }
 
 .pagination .page-item.active .page-link {
-    background-color: #007bff;
+    background-color: tomato;
     color: white;
-    border-color: #007bff;
+    border-color: tomato;
 }
 .pagination button {
     background-color: #f0f0f0;
@@ -66,4 +66,5 @@
     cursor: pointer;
     font-size: 20px;
     transition: background-color 0.3s, color 0.3s;
+    border-radius: 2px;
   }
