--- a/frontend/src/components/FoodItem/FoodItem.css
+++ b/frontend/src/components/FoodItem/FoodItem.css
@@ -8,7 +8,7 @@
 }
 .food-item-image{
     width: 100%;
-    height: 250px;
+    height: 100%;
     border-radius: 15px 15px 0px 0px;
 }
 .food-item-info{
