--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -21,13 +21,13 @@
 .header-contents h2{
     font-weight: 500;
     color: white;
-    text-shadow: 1px 2px 2px black;
+    text-shadow: 1px 2px 2px #747474;
     font-size: max(4.5vw, 22px);
 }
 
 .header-contents p{
     color: white;
-    text-shadow: 1px 2px 2px black;
+    text-shadow: 1px 2px 2px #747474;
     font-size: 1vw;
 }
 
